fix margin on the paragraph on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ main {
     font-weight: 400;
     font-size: 18px;
     line-height: 30px;
+    margin-bottom: 40px;
 }
 
 a .btn {
